Closed
Bug 541387
Opened 16 years ago
Closed 16 years ago
[@ nsPop3IncomingServer::GetDeferredToAccount(nsACString_internal&)] Thunderbird will not start
Categories
(MailNews Core :: Networking: POP, defect)
Tracking
(blocking-thunderbird3.0 .2+, thunderbird3.0 .2-fixed)
RESOLVED
FIXED
Thunderbird 3.1b1
People
(Reporter: messenger.ian, Assigned: timeless)
References
Details
(Keywords: crash, fixed-seamonkey2.0.3, regression, Whiteboard: [ccbr])
Crash Data
Attachments
(2 files)
|
765 bytes,
patch
|
Bienvenu
:
review+
standard8
:
superreview+
standard8
:
approval-thunderbird3.0.2+
|
Details | Diff | Splinter Review |
|
755 bytes,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
standard8
:
approval-thunderbird3.0.2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.9.1.7) Gecko/20091221 Firefox/3.5.7 GTB6 (.NET CLR 3.5.30729)
Build Identifier: BuildID: 20100111101938
I auto-updated his morning from 3.0 to 3.01. Thunderbird will not start any more. I sometimes get a memory error (cannot read?), but not all the time. Goes to report screen, with these results:
Add-ons: {e2fda1a4-762b-4020-b5ad-a41df1933103}:1.0b1,{a62ef8ec-5fdc-40c2-873c-223b8a6925cc}:0.6b1,{972ce4c6-7e08-4474-a285-3208198ce6fd}:3.0.1
BuildID: 20100111101938
CrashTime: 1264174171
Email:xxxxxxxx@xxxxx
InstallTime: 1264150194
ProductName: Thunderbird
SecondsSinceLastCrash: 5709
StartupTime: 1264174167
Theme: classic/1.0
Throttleable: 1
URL:
I have tried starting in safe mode, but exactly the same thing happens.
Reproducible: Always
I cannot now access my emails, business is sinking fast !
| Reporter | ||
Comment 1•16 years ago
|
||
Additional info on memory error
0x00487e66 at 0x0000000024 the memory could not be "read"
Comment 2•16 years ago
|
||
DO you already tried http://kb.mozillazine.org/Safe_mode ?
Do you get the Mozilla crash reporter after the crash ?
| Reporter | ||
Comment 3•16 years ago
|
||
Yes, I tried safe mode and the result is exactly the same.
Yes, I did get the crash report - visible details are shown above
Comment 4•16 years ago
|
||
We need the crash ID of the report.
You can find the ID if you follow https://developer.mozilla.org/en/How_to_get_a_stacktrace_for_a_bug_report#Accessing_crash_report_IDs_outside_of_Firefox (replace Firefox with Thunderbird in the path).
Can you please also try a new profile :
http://kb.mozillazine.org/Profile_Manager
| Reporter | ||
Comment 5•16 years ago
|
||
There are several crash reports, one of them is
Crash ID: bp-0d71f9e5-c481-499d-adba-000382100122
I have also tried a new profile, Thunderbird loaded, but crashed as soon as I copied the old profile data into the new profile directory
Comment 6•16 years ago
|
||
0 thunderbird.exe nsPop3IncomingServer::GetDeferredToAccount mailnews/local/src/nsPop3IncomingServer.cpp:227
1 xpcom_core.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:101
2 mozcrt19.dll operator new objdir-tb/mozilla/memory/jemalloc/src/new.cpp:54
3 thunderbird.exe nsScriptSecurityManager::CanCreateWrapper caps/src/nsScriptSecurityManager.cpp:2898
4 thunderbird.exe XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1590
Keywords: crash
bienvenu@4604
225 rv = acctMgr->FindAccountForServer(localServer, getter_AddRefs(localAccount));
This returns NS_OK + nsnull
226 NS_ENSURE_SUCCESS(rv, rv);
this is the wrong check
227 localAccount->GetKey(aRetVal);
this is the crash.
my tree isn't new enough to have this code.
Blocks: 538414
Keywords: regression
Summary: Auto-updated from 3.0 to 3.01, now will Thunderbird will not start → [@ nsPop3IncomingServer::GetDeferredToAccount] Thunderbird will not start
Assignee: nobody → timeless
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #423322 -
Flags: review?
Attachment #423322 -
Flags: review? → review?(bienvenu)
Updated•16 years ago
|
Component: General → Networking: POP
Product: Thunderbird → MailNews Core
QA Contact: general → networking.pop
Whiteboard: [ccbr]
Version: unspecified → 1.9.1 Branch
Updated•16 years ago
|
Summary: [@ nsPop3IncomingServer::GetDeferredToAccount] Thunderbird will not start → [@ nsPop3IncomingServer::GetDeferredToAccount(nsACString_internal&)] Thunderbird will not start
Updated•16 years ago
|
Attachment #423322 -
Flags: review?(bienvenu) → review+
Updated•16 years ago
|
Attachment #423322 -
Flags: superreview?(bugzilla)
Comment 11•16 years ago
|
||
(In reply to comment #7)
> 226 NS_ENSURE_SUCCESS(rv, rv);
>
> this is the wrong check
If that's the wrong check, what _should_ it be -- and why wasn't it changed in the proposed patch ?
Comment 12•16 years ago
|
||
We should be checking for errors; the check isn't wrong; we just need the additional check
Updated•16 years ago
|
blocking-thunderbird3.0: ? → .2+
Updated•16 years ago
|
Attachment #423322 -
Flags: superreview?(bugzilla) → superreview+
Comment 13•16 years ago
|
||
I didn't want to hijack timeless' patch as I want to get that in for 3.0.2, but I will extend the bug - add a bit of documentation to indicate that FindAccountForServer may return null, so that callers can be aware if they look at the idl.
Attachment #424570 -
Flags: superreview?(bienvenu)
Attachment #424570 -
Flags: review?(bienvenu)
Updated•16 years ago
|
Attachment #424570 -
Flags: superreview?(bienvenu)
Attachment #424570 -
Flags: superreview+
Attachment #424570 -
Flags: review?(bienvenu)
Attachment #424570 -
Flags: review+
Comment 14•16 years ago
|
||
Both patches checked in:
http://hg.mozilla.org/comm-central/rev/b353a7fb731d
http://hg.mozilla.org/comm-central/rev/0c73bb841289
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.1b1
Updated•16 years ago
|
Attachment #423322 -
Flags: approval-thunderbird3.0.2?
Comment 15•16 years ago
|
||
Comment on attachment 423322 [details] [diff] [review]
proposal
Low-risk obviously needed null-check patch. a=Standard8
Attachment #423322 -
Flags: approval-thunderbird3.0.2? → approval-thunderbird3.0.2+
Comment 16•16 years ago
|
||
Comment on attachment 424570 [details] [diff] [review]
Document possible null return value.
Might as well take the comment-only documentation as well.
Attachment #424570 -
Flags: approval-thunderbird3.0.2+
Comment 17•16 years ago
|
||
Checked into 1.9.1 branch:
http://hg.mozilla.org/releases/comm-1.9.1/rev/2f13551589e4
http://hg.mozilla.org/releases/comm-1.9.1/rev/7a0516ecad29
status-thunderbird3.0:
--- → .2-fixed
Updated•16 years ago
|
Keywords: fixed-seamonkey2.0.3
Comment 18•16 years ago
|
||
Wayne can you verify this one please ?
Comment 19•16 years ago
|
||
Is this one of those problem where they see the crash only once?
Or, will reporter be able to verify problem is gone with newer build?
ftp://ftp.mozilla.org/pub/thunderbird/nightly/latest-comm-1.9.1/
| Reporter | ||
Comment 20•16 years ago
|
||
It crashes every time - I still can't user Thunderbird
If you have a compiled Windows version, I can try it out for you !
Comment 21•16 years ago
|
||
(In reply to comment #20)
> It crashes every time - I still can't user Thunderbird
> If you have a compiled Windows version, I can try it out for you !
have a look in http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/3.0.2-candidates/build1/win32/
| Reporter | ||
Comment 22•16 years ago
|
||
It works now, problem solved
Many thanks
Updated•14 years ago
|
Crash Signature: [@ nsPop3IncomingServer::GetDeferredToAccount(nsACString_internal&)]
You need to log in
before you can comment on or make changes to this bug.
Description
•