Bug 541387 [@ nsPop3IncomingServer::GetDeferredToAccount] Thunderbird will not start. r=bienvenu,sr=Standard8